Added anchors to headings

--- a/template/index.html
+++ b/template/index.html
@@ -2,6 +2,9 @@
 <head>
 </head>
 <body>
+    <!-- build:section toc -->
+    Menu
+    <!-- /build -->
     <!-- build:section views -->
     <!-- /build -->
 </body>
