Minor text improvements, added a Coding standard section.

--- a/template/index.html
+++ b/template/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<head>
-</head>
-<body>
-    <!-- build:section toc -->
-    Menu
-    <!-- /build -->
-    <!-- build:section views -->
-    <!-- /build -->
-</body>
-
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>eZ Exceed guide</title>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/screen.css" />
+        <link rel="made" href="http://haraldson.ch/" title="Hein Haraldson Berg" />
+        <link rel="author" href="http://haraldson.ch/" />
+        <link rel="icon" href="gfx/favicon.png" type="image/png" />
+        <link rel="shortcut icon" href="gfx/favicon.png" type="image/png" />
+    </head>
+    <body>
+        <div id="ezexceed-docs" class="container">
+            <div class="row">
+                <div class="toc span3">
+                    <!-- build:section toc -->
+                    <!-- /build -->
+                </div>
+                <div class="content span9 offset3">
+                    <!-- build:section views -->
+                    <!-- /build -->
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
