--- a/template/index.html
+++ b/template/index.html
@@ -10,6 +10,7 @@
         <link rel="author" href="http://haraldson.ch/" />
         <link rel="icon" href="gfx/favicon.png" type="image/png" />
         <link rel="shortcut icon" href="gfx/favicon.png" type="image/png" />
+        <!-- build:style dist --><!-- /build -->
     </head>
     <body>
         <div id="ezexceed-docs" class="container">
@@ -24,5 +25,6 @@
                 </div>
             </div>
         </div>
+        <!-- build:script dist --><!-- /build -->
     </body>
 </html>
