--- a/template/index.html
+++ b/template/index.html
@@ -3,13 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>eZ Exceed guide</title>
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/screen.css" />
         <link rel="made" href="http://www.keyteq.no/" title="Keyteq Labs" />
         <link rel="author" href="http://www.keyteq.no/" />
-        <link rel="icon" href="gfx/favicon.png" type="image/png" />
-        <link rel="shortcut icon" href="gfx/favicon.png" type="image/png" />
+        <link rel="icon" href="/assets/gfx/favicon.png" type="image/png" />
+        <link rel="shortcut icon" href="/assets/gfx/favicon.png" type="image/png" />
         <!-- build:style dist --><!-- /build -->
     </head>
     <body>
