--- a/template/index.html
+++ b/template/index.html
@@ -5,8 +5,8 @@
         <title>eZ Exceed guide</title>
         <link rel="made" href="http://www.keyteq.no/" title="Keyteq Labs" />
         <link rel="author" href="http://www.keyteq.no/" />
-        <link rel="icon" href="/assets/gfx/favicon.png" type="image/png" />
-        <link rel="shortcut icon" href="/assets/gfx/favicon.png" type="image/png" />
+        <link rel="icon" href="assets/gfx/favicon.png" type="image/png" />
+        <link rel="shortcut icon" href="assets/gfx/favicon.png" type="image/png" />
         <!-- build:style dist --><!-- /build -->
     </head>
     <body>
