--- a/assets/css/04-screen.css
+++ b/assets/css/04-screen.css
@@ -61,12 +61,15 @@
                 top: 50%;
                 left: -40px;
                 margin-top: -20px;
-                background: url(assets/gfx/icon/32/link.png) 0 0 no-repeat;
-                opacity: .5;
-                display: none;
+                background: url(../gfx/icon/32/link.png) 0 0 no-repeat;
+                opacity: 0;
             }
             
-                .content h2:hover a[href^="#"] { display: block; }
+                .content h2:hover a[href^="#"] {
+                    display: block;
+                    opacity: .5;
+                }
+                
                     .content h2:hover a[href^="#"]:hover { opacity: 1; }
         
         .content h3 {
