--- a/template/index.html
+++ b/template/index.html
@@ -11,8 +11,10 @@
         <div id="ezexceed-docs" class="container">
             <div class="row">
                 <div class="toc span3">
-                    <!-- build:section toc -->
-                    <!-- /build -->
+                    <div class="well">
+                        <!-- build:section toc -->
+                        <!-- /build -->
+                    </div>
                 </div>
                 <div class="content span9 offset3">
                     <!-- build:section views -->
