--- a/assets/css/04-screen.css
+++ b/assets/css/04-screen.css
@@ -1,18 +1,27 @@
-.container { padding: 60px 0; }
+.container {
+    padding-bottom: 60px;
+}
 
     .toc {
-        padding: 30px 0;
+        height: 100%;
         position: fixed;
-        top: 60px;
-        max-height: 100%;
-        overflow: auto;
     }
     
         @media (max-width: 767px) {
             .toc {
                 position: static;
                 top: auto;
+                margin-bottom: 40px;
             }
+        }
+        
+        .toc .well {
+            position: absolute;
+            top: 0;
+            left: 0;
+            margin: 36px 0 0;
+            max-height: 85%;
+            overflow: auto;
         }
     
         .toc a:link { text-decoration: none; }
@@ -25,11 +34,17 @@
         }
         
         .toc ul {
-            margin: 0 20px 24px 0;
+            font-size: 12px;
+            line-height: 1.5;
+            margin: 0 0 24px 0;
             list-style: disc inside;
         }
+        
+        @media (max-width: 767px) {
+            .toc ul { margin-right: 0; }
+        }
     
-    .content { padding: 24px 0 0; }
+    .content { padding: 50px 0; }
         
         .content h1,
         .content h2,
@@ -38,11 +53,43 @@
         .content h1 {
             font-size: 30px;
             padding: 0 0 6px;
-            border-bottom: 4px solid #F7B532;
+            border-bottom: 4px solid #f7b532;
             margin: 60px 0 12px;
         }
         
-            .content h1:first-child { margin-top: 0; }
+            .content h1:first-child {
+                position: relative;
+                height: 112px;
+                text-indent: 100%;
+                white-space: nowrap;
+                overflow: hidden;
+                background: url(../gfx/logo.png) 0 0 no-repeat;
+                padding: 0;
+                border: none;
+                margin-top: 0;
+            }
+                
+                .content h1:first-child:before {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    top: 8px;
+                    left: 242px;
+                    width: 100%;
+                    height: 2px;
+                    background: #b1b1b1;
+                }
+                
+                .content h1:first-child:after {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 6px;
+                    background: #f7b532;
+                }
         
         .content h2 {
             font-size: 24px;
@@ -60,7 +107,7 @@
                 position: absolute;
                 top: 50%;
                 left: -40px;
-                margin-top: -20px;
+                margin-top: -16px;
                 background: url(../gfx/icon/32/link.png) 0 0 no-repeat;
                 opacity: 0;
             }
@@ -83,6 +130,13 @@
             margin: 0 0 3px;
         }
         
+        .content h1:first-child + p {
+            font-size: 27px;
+            font-weight: 100;
+            line-height: 1.33;
+            color: #888;
+        }
+        
         .content p,
         .content ul,
         .content ol {
@@ -101,14 +155,21 @@
         .content ul p + ol,
         .content ol p + ol { margin-top: -21px; }
         
+        .content p > code,
+        .content li > code {
+            color: #f77c32;
+            background-color: #f5f2f0;
+            border-color: rgba(0, 0, 0, .15);
+        }
+        
         .container .content pre { margin: 0 0 24px; }
 
-a {
+a:link {
     color: #f7b532;
     text-decoration: underline;
 }
 
-    a:visited { color: #c28610; }
+    a:visited { color: #666; }
     a:hover { color: #f77c32; }
     a:focus { border-bottom: 1px solid #000; }
     a:active {  }
