--- a/template/index.html
+++ b/template/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>eZ Exceed guide</title>
         <!-- build:style dist --><!-- /build -->
         <link rel="icon" href="assets/gfx/favicon.png" type="image/png" />
