--- a/assets/css/04-screen.css
+++ b/assets/css/04-screen.css
@@ -1,3 +1,7 @@
+body {
+    text-rendering: optimizeLegibility;
+}
+
 .container {
     padding-bottom: 60px;
 }
@@ -168,11 +172,11 @@
         .container .content pre { margin: 0 0 24px; }
 
 a:link {
-    color: #f7b532;
+    color: #f77c32;
     text-decoration: underline;
 }
 
     a:visited { color: #666; }
-    a:hover { color: #f77c32; }
+    a:hover { color: #c73c11; }
     a:focus { border-bottom: 1px solid #000; }
     a:active {  }
